@@ -1,3 +1,13 @@
+2007-05-10  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
+	* unichrome/via_driver.c:
+	* unichrome/via_driver.h:
+	* unichrome/via.man:
+
+	Added per chipset option defaults.  This should allow the
+	driver to install and work out of the box with almost all
+	hardware and xorg.conf configurations.
+
 2007-05-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
 
 	* libxvmc/viaLowLevel.h:
